test/pass/internal/verify_calltrace_with_foreign_calls.lily
define f(input: Integer): Integer {
    var trace = calltrace()

    if trace.size() != 3:
        stderr.print("Failed.")

    return input
}

define map(x: List[Integer], g: Function(Integer => Integer)) {
    g(x[0])
}

var v = [1]

v.map(f)
map(v, f)
v.map(f)
map(v, f)
